Implemented DataApi to send weather data to watchface

--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="date_text_size">14dp</dimen>
     <dimen name="date_y_offset">90dp</dimen>
 
+    <dimen name="line_y_offset">100dp</dimen>
+
 </resources>
